<resources>
    <string name="app_name">Camera03</string>
    <string name="capture">capture</string>
    <string name="ae">AE</string>
    <string name="exp_time">Exp. Time:</string>
    <string name="preference_file_key">com.graystone.camera03.preview</string>
    <string name="preview_snapshot_count_key">preview_snapshot_count</string>
    <string name="camera">camera</string>
    <string name="restore">restore</string>
    <string name="scene_mode">Scene Mode</string>
    <string name="noise_reduction">NR</string>
    <string name="white_balance">WB</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="live_view">Live View</string>
    <string name="black_background">Black</string>
    <string name="noise_reduction_level">NR Level</string>
</resources>