<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/panels"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/previewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <SurfaceView
            android:id="@+id/previewAux"
            android:layout_width="720px"
            android:layout_height="720px"
            android:layout_marginStart="5px"
            app:layout_constraintLeft_toRightOf="@id/preview"
            app:layout_constraintTop_toTopOf="@id/preview"
            />
        <SurfaceView
            android:id="@+id/preview"
            android:layout_width="1080px"
            android:layout_height="1080px"
            android:layout_marginStart="110sp"
            android:layout_marginTop="0sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageButton
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_camera_24"
        android:contentDescription="@string/capture"
        android:minWidth="32dp"
        android:minHeight="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <ImageButton
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_lock_open_24"
        android:contentDescription="@string/ae"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn0"
        />
    <ImageButton
        android:id="@+id/btn1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_settings_backup_restore_24"
        android:contentDescription="@string/restore"
        app:layout_constraintBottom_toTopOf="@id/btn1"
        app:layout_constraintLeft_toRightOf="@id/btn2"
        />
    <ImageButton
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_swap_horiz_24"
        android:contentDescription="@string/capture"
        app:layout_constraintBottom_toTopOf="@id/btn0"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <ImageButton
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_camera_aux_24"
        android:contentDescription="@string/capture"
        app:layout_constraintBottom_toTopOf="@id/btn2"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <ImageButton
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_camera_alt_24"
        android:contentDescription="@string/camera"
        app:layout_constraintBottom_toTopOf="@id/btn3"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <ImageButton
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_photo_filter_24"
        android:contentDescription="@string/scene_mode"
        app:layout_constraintBottom_toTopOf="@id/btn1_2"
        app:layout_constraintLeft_toRightOf="@id/btn2"
        />
    <Spinner
        android:id="@+id/imageFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintLeft_toLeftOf="parent"
        >
    </Spinner>
    <com.google.android.material.slider.Slider
        android:id="@+id/saturationSlider"
        android:layout_width="100sp"
        android:layout_height="30sp"
        android:valueFrom="0.0"
        android:valueTo="10.0"
        android:stepSize="1.0"
        app:thumbRadius="4sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/exposureTimeContainer"
        />
    <com.google.android.material.slider.Slider
        android:id="@+id/contrastSlider"
        android:layout_width="100sp"
        android:layout_height="30sp"
        android:valueFrom="-4.0"
        android:valueTo="4.0"
        android:stepSize="1.0"
        app:thumbRadius="4sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/saturationSlider"
        />
    <com.google.android.material.slider.Slider
        android:id="@+id/brightnessSlider"
        android:layout_width="100sp"
        android:layout_height="30sp"
        android:valueFrom="0.0"
        android:valueTo="30.0"
        android:stepSize="3.0"
        app:thumbRadius="4sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/contrastSlider"
        />
    <Spinner
        android:id="@+id/edgeMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn1">
    </Spinner>
    <Spinner
        android:id="@+id/noiseReduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/edgeMode">
    </Spinner>
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exp_time"
        android:textColor="@color/purple_200"
        android:textSize="8sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/exposureLinesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_density_small_24"
        android:contentDescription="@string/exp_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/isoContainer"
        />
    <LinearLayout
        android:id="@+id/exposureTimeContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >
        <ImageView
            android:id="@+id/btnExpInc"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/ae"
            android:src="@drawable/ic_baseline_keyboard_arrow_up_24" />
        <ImageView
            android:id="@+id/exposureTimeIcon"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/ae"
            android:src="@drawable/ic_baseline_exposure_24" />
        <ImageView
            android:id="@+id/btnExpDec"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/ae"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/isoContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/exposureTimeContainer" >
        <ImageView
            android:id="@+id/btnIsoInc"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/ae"
            android:src="@drawable/ic_baseline_keyboard_arrow_up_24" />
        <ImageView
            android:id="@+id/isoIcon"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/ae"
            android:src="@drawable/ic_baseline_iso_24" />
        <ImageView
            android:id="@+id/btnIsoDec"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/ae"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>